feat: add div and comment

--- a/snack-3/index.html
+++ b/snack-3/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     
+    <div id="redTxt">
 
+    </div>
+
+    <div id="greenTxt"></div>
+    
     <script src="js/script.js"></script>
 </body>
 </html>
